--- a/budget/templates/budget/pages/new_budget.html
+++ b/budget/templates/budget/pages/new_budget.html
@@ -1,9 +1,11 @@
+{% load static %}
 {% include "budget/partials/head.html" %}
 
-{% load static %}
-<link rel="stylesheet" href="{% static 'budget/css/container.css' %}">
 <body>
-  {% include "global/partials/header.html" %}
+  <header>
+    {% include "global/partials/header.html" %}
+  </header>
+
   <main>
     <div class="content">
       <div class="sub_menu">
@@ -13,48 +15,42 @@
       
       <h1>Novo Orçamento</h1>
 
-      
       <form class="form_button" action="/budget/gerar-relatorio/" method="post">
         {% csrf_token %}
         <button class="enviar" type="submit">Gerar Relatório</button>
-    </form>
-
+      </form>
 
       <!-- Formulário principal -->
       <form action="/budget/salvar-carrinho/" method="post">
         {% csrf_token %}
         <div class="dados-orcamento">
-            <!-- Área do Cliente -->
-        <fieldset class='area-cliente'>
-          
-          <legend>Cliente</legend>
-          <select name="cliente" id="cliente">
-            <option value="" disabled {% if not selected_cliente %}selected{% endif %}>Selecione o Cliente</option>
-            {% for cliente in clientes %}
-              <option value="{{ cliente.id }}" {% if selected_cliente and cliente.id == selected_cliente.id %}selected{% endif %}>
+          <!-- Área do Cliente -->
+          <fieldset class="area-cliente">
+            <legend>Cliente</legend>
+            <select name="cliente" id="cliente">
+              <option value="" disabled {% if not selected_cliente %}selected{% endif %}>Selecione o Cliente</option>
+              {% for cliente in clientes %}
+                <option value="{{ cliente.id }}" {% if selected_cliente and cliente.id == selected_cliente.id %}selected{% endif %}>
                   {{ cliente.nome }}
-              </option>
-            {% endfor %}
-          </select>
-        </fieldset>
+                </option>
+              {% endfor %}
+            </select>
+          </fieldset>
 
-        <!-- Área do Vendedor -->
-        <fieldset class="area-vendedor">
-          <legend>Vendedor</legend>
-          <select name="vendedor" id="vendedor">
-            <option value="" disabled {% if not selected_vendedor %}selected{% endif %}>Selecione o Vendedor</option>
-            {% for vendedor in vendedores %}
-              <option value="{{ vendedor.id }}" {% if selected_vendedor and vendedor.id == selected_vendedor.id %}selected{% endif %}>
+          <!-- Área do Vendedor -->
+          <fieldset class="area-vendedor">
+            <legend>Vendedor</legend>
+            <select name="vendedor" id="vendedor">
+              <option value="" disabled {% if not selected_vendedor %}selected{% endif %}>Selecione o Vendedor</option>
+              {% for vendedor in vendedores %}
+                <option value="{{ vendedor.id }}" {% if selected_vendedor and vendedor.id == selected_vendedor.id %}selected{% endif %}>
                   {{ vendedor.nome }}
-              </option>
-            {% endfor %}
-          </select>
-        </fieldset>
+                </option>
+              {% endfor %}
+            </select>
+          </fieldset>
         </div>
-        
-        
-        
-        
+
         <!-- Adicionar Produto -->
         <fieldset class="carrinho">
           <legend>Adicionar Produto</legend>
@@ -66,15 +62,12 @@
 
           <div class="dado-produto">
             <input name="Qntde" type="text" id="quantity" placeholder="Quantidade" onchange="price_finally()">
-          
-          <input name="valor" type="text" id="unit_price" placeholder="Preço Unitário" readonly onchange="price_finally()">
-          <input name="valor_total" type="text" id="total_price" placeholder="Preço Total" readonly>
-          <button type="submit" class="add">
-            <img class="icons" src="{% static "budget/img/add.png" %}" alt="delete">
-          </button>
+            <input name="valor" type="text" id="unit_price" placeholder="Preço Unitário" readonly onchange="price_finally()">
+            <input name="valor_total" type="text" id="total_price" placeholder="Preço Total" readonly>
+            <button type="submit" class="add">
+              <img class="icons" src="{% static 'budget/img/add.png' %}" alt="Adicionar">
+            </button>
           </div>
-          
-          
         </fieldset>
       </form>
       
@@ -103,12 +96,12 @@
                 <td data-valor="{{ item.valor_total }}">{{ item.valor_total }}</td>
                 <td>
                   <a class="edit-item" href="">
-                    <img class="icons" src="{% static "budget/img/edit.png" %}" alt="">
+                    <img class="icons" src="{% static 'budget/img/edit.png' %}" alt="Editar">
                   </a>
                   <a class="delete_cart" href="/budget/excluir_produto/{{item.id}}">
-                    <img class="icons" src="{% static "budget/img/remove.png" %}" alt="delete">
+                    <img class="icons" src="{% static 'budget/img/remove.png' %}" alt="Remover">
                   </a>
-                  </td>
+                </td>
               </tr>
             {% endfor %}
           </tbody>
@@ -116,178 +109,137 @@
       </fieldset>
       
       <!-- Opções de envio -->
-       <div class="action_button">
+      <div class="action_button">
         <form class="form_button" action="/budget/enviar_orcamento/" method="post">
           {% csrf_token %}
-          
-            <button class="enviar"  type="submit">Enviar Orçamento</button>
-    
+          <button class="enviar" type="submit">Enviar Orçamento</button>
         </form>
         <form class="form_button" action="/budget/enviar_orcamento/" method="post">
           {% csrf_token %}
-            <button class="enviar"  type="submit">Efetuar Venda</button>
+          <button class="enviar" type="submit">Efetuar Venda</button>
         </form>
         <button class="enviar">Cancelar</button>
-       </div>
-      
-    </div>
-    <div class="footer">
-    <footer>Assinatura</footer>
+      </div>
     </div>
   </main>
+
   <style>
-   
-    .content {
-      width: 85vw;
-      height: auto;
-      display: flex;
-      flex-direction: column;
-    
+    body {
+      margin: 0; /* Remove margens padrão do body */
+      font-family: Arial, sans-serif;
+    }
 
-    }
-    .dados-orcamento{
-      display: flex;
-      gap: 1em;
-    }
-  .area-cliente{
-      padding: 20px;
-      width: 90%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 10px;
-      border: 2px solid black;
-      margin-left: 2em;
-  }
-  .area-cliente select{
-    width: 80%;
-    height: 3em;
-  }
-  .area-vendedor{
-    padding: 20px;
-      width: 70%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 10px;
-      border: 2px solid black;
-      margin-right: 2em;
-  }
-  .icons{
-    width: 2em;
-    margin-left: 2em;
-  }
-  .area-vendedor select{
-    width: 80%;
-    height: 3em;
-  }
-  .response-message {
-      color: green; /* ou red para erros */
-      font-weight: bold;
-  }
-  .carrinho{
-      padding: 20px;
-      width: 90%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 1em;
-      border-radius: 10px;
-      border: 1px solid black;
-      margin-bottom: 0.5em;
-      margin-left: 3em;
-  }
-  .dado-produto{
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-  }
-  .link-estoque{
-    background-color: #fff;
-    height: 2.2em;
-    text-align: center;
-    padding-top: 0.5em;
-    text-decoration: none;
-    color: black;
-    margin-right: 6em;
-  }
-  .dado-produto input{
-    height: 2.2em;
-  }
-  .dado-produto button{
-    height: 2.2em;
-  }
-  .add{
-    border: none;
-    background-color: #fff;
-    cursor: pointer;
-  }
-  .infos{
-    padding: 20px;
-      width: 90%;
-      border-radius: 10px;
-      border: 2px solid black;
-      margin-bottom: 0.5em;
-      margin-top: 2em;
-      margin-left: 2em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-  }
-  #tabela-carrinho th, #tabela-carrinho td {
-      padding: 2px;
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #007bff;
+      padding: 1em;
+      color: white;
       text-align: center;
+      z-index: 1000;
+  }
+
+    .content {
+      padding-top: 60px; /* Adiciona um espaço superior para evitar que o conteúdo fique atrás do cabeçalho */
+      width: 85vw; /* Largura do conteúdo */
+      min-height: 90vh; /* Altura mínima do conteúdo */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: auto;
+      padding: 1em;
+    }
+
+    .sub_menu {
+      display: flex;
+      gap: 1em;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 0.5em;
+      text-align: center;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      width: 90%;
+      max-width: 600px;
+      padding: 10px;
       border: 2px solid black;
-      width: 12em;
-  }
-  .delete_cart{
-    color: black;
-  }
-  .edit-item{
-    color: black;
-  }
-  .enviar{
-            padding: 0.7em 1.5em;
-            background-color: #007bff;
-            color: white;
-            font-weight: bold;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-bottom: 1em;
-  }
-  .action_button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-  }
+      border-radius: 10px;
+      gap: 1em;
+      align-items: center;
+    }
 
-  
-  .footer{
-    margin-top: 0px;
-    height: 1px;
-    padding-top: 0px;
+    form input, form select {
+      width: 70%;
+      height: 1.5em;
+      padding: 0.5em;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+    }
 
-}
+    form button {
+      padding: 0.7em 1.5em;
+      background-color: #007bff;
+      color: white;
+      font-weight: bold;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
 
+    form button:hover {
+      background-color: #0056b3;
+    }
+
+    .response-message {
+      margin: 1em 0;
+      color: green; /* Altere a cor conforme necessário */
+    }
+
+    .infos {
+      width: 100%;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      padding: 1em;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 0.5em;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f1f1f1;
+    }
+
+    .action_button {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      margin-top: 1em;
+    }
+
+    .footer {
+      width: 100%;
+      background-color: #f1f1f1;
+      padding: 1em;
+      text-align: center;
+      border-top: 1px solid #ddd;
+    }
   </style>
-  <script>
-    $(document).ready(function() {
-        $('#cliente').select2();
-        $('#vendedor').select2();
-    });
-  </script>
-  
-  <script src="{% static 'budget/js/new_budget.js' %}"></script>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=add" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=edit" />
-  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=delete_forever" />
-  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+  <script src="{% static 'budget/js/budget.js' %}"></script>
 </body>
 </html>
